syntax = "proto3";
package kratos.api;

option go_package = "kratos-example/app/user/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Zap zap = 3;
  Registry registry = 4;
  Jwt jwt = 5;
  Trace trace = 6;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  string name = 3;
  string version = 4;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    bool debug = 3;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
    int32 db = 6;
  }
  Database database = 1;
  Redis redis = 2;
}

message Zap {
  string level = 1;
  string prefix = 2;
  string format = 3;
  string encode_level = 4;
  string stacktrace_key = 5;
  int32 max_age = 6;
  bool show_line = 7;
  bool log_in_console = 8;
}

message Registry {
  message Consul {
    string addr = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

message Jwt {
  message JwtServer {
    string signing_key = 1;
  }
  message JwtClient {
    string signing_key = 1;
  }
  JwtServer server = 1;
  JwtClient client = 2;
}

message Trace{
  string endpoint = 1;
  bool enable = 2;
}